[gd_scene load_steps=2 format=3 uid="uid://dym6wcyr3r66x"]

[ext_resource type="Script" path="res://scenes/Online-Test/Lobby/Scripts/Multiplayer_Controller.gd" id="1_lr4fy"]

[node name="Online-lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lr4fy")

[node name="Join" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158854
anchor_top = 0.0246914
anchor_right = 0.284722
anchor_bottom = 0.0972222
text = "Join"
metadata/_edit_use_anchors_ = true

[node name="Host" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0208333
anchor_top = 0.0246914
anchor_right = 0.146701
anchor_bottom = 0.0972224
text = "Host
"
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 70.0
offset_right = 169.0
offset_bottom = 117.0
text = "Start Game
"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 184.0
offset_right = 169.0
offset_bottom = 231.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 132.0
offset_right = 169.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 25
text = "Name:"

[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
